add css and js changes

--- a/week2.project.html
+++ b/week2.project.html
@@ -3,6 +3,9 @@
 
 <head>
     <title>birthday-calculator</title>
+    <p>calculating the day you were born</p>
+    <p>hello guys,welcome to my website.</p>
+    <p>this is a form you fill to be able to get the date you were born.Many of us only know the dates,months and years but a few of us know the day.Hope this will be helpful to you all</p>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,13 +16,34 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
+
+
+
+
+
 <body>
-    <div class="container">
+    <div class="container panelbody">
         <input type="text" id="inputData" class="inputCss" />
         <input type="text" id="result" class="resultCss" readonly />
+        <div class="rowPad">
     <div>
-        <button class></button>
-        <button class></button>
+        <button class="btn btn-primary">kwasi</button>
+        <button class="btn btn-primary">kwadwo</button>
+        <button class="btn btn-primary">kwabena</button>
+        <button class="btn btn-primary">kwaku</button>
+        <button class="btn btn-primary">yaw</button>
+        <button class="btn btn-primary">kofi</button>
+        <button class="btn btn-primary">kwame</button>
+    </div>
+    <div>
+        <button class="btn btn-primary">akosua</button>
+        <button class="btn btn-primary">adwoa</button>
+        <button class="btn btn-primary">abenaa</button>
+        <button class="btn btn-primary">akua</button>
+        <button class="btn btn-primary">yaa</button>
+        <button class="btn btn-primary">afua</button>
+        <button class="btn btn-primary">ama</button>
+
     </div>
     
 
