--- a/week2.project.html
+++ b/week2.project.html
@@ -3,12 +3,15 @@
 
 <head>
     <title>birthday-calculator</title>
-    <p>calculating the day you were born</p>
+    <h1>calculating the <em>exact</em> day you were born</h1>
     <p>hello guys,welcome to my website.</p>
-    <p>this is a form you fill to be able to get the date you were born.Many of us only know the dates,months and years but a few of us know the day.Hope this will be helpful to you all</p>
+    <p>this is a form you fill to be able to get the date you were born.Many of us only know the dates,months and years but a few of us know the day.
+        <br>Hope this will be helpful to you all</p>
+        <br>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <br>
     
 
     <!-- Bootstrap CSS -->
@@ -24,10 +27,23 @@
 <body>
     <div class="container panelbody">
         <input type="text" id="inputData" class="inputCss" />
+        <br>
         <input type="text" id="result" class="resultCss" readonly />
+        <br>
         <div class="rowPad">
     <div>
-        <button class="btn btn-primary">kwasi</button>
+        <button class="btn btn-primary">day of the week</button>
+        <button class="btn btn-primary">sunday</button>
+        <button class="btn btn-primary">monday</button>
+        <button class="btn btn-primary">tuesday</button>
+        <button class="btn btn-primary">wednesday</button>
+        <button class="btn btn-primary">thursday</button>
+        <button class="btn btn-primary">friday</button>
+        <button class="btn btn-primary">sartuday</button>
+    </div>       
+    <div>
+        <button class="btn btn-primary">male-names</button>
+        <button class="btn btn-primary">kwasi</button>   
         <button class="btn btn-primary">kwadwo</button>
         <button class="btn btn-primary">kwabena</button>
         <button class="btn btn-primary">kwaku</button>
@@ -36,6 +52,7 @@
         <button class="btn btn-primary">kwame</button>
     </div>
     <div>
+        <button class="btn btn-primary">female-names</button>
         <button class="btn btn-primary">akosua</button>
         <button class="btn btn-primary">adwoa</button>
         <button class="btn btn-primary">abenaa</button>
