add descriptions of target boxes

--- a/week2.project.html
+++ b/week2.project.html
@@ -26,13 +26,16 @@
 
 <body>
     <div class="container panelbody">
+        <h2>input your birthday in <em>date/month/year</em> order</h2>
         <input type="text" id="inputData" class="inputCss" />
         <br>
+        <h1>your result will display here</h1>
         <input type="text" id="result" class="resultCss" readonly />
         <br>
         <div class="rowPad">
     <div>
         <button class="btn btn-primary">day of the week</button>
+        <br>
         <button class="btn btn-primary">sunday</button>
         <button class="btn btn-primary">monday</button>
         <button class="btn btn-primary">tuesday</button>
@@ -43,6 +46,7 @@
     </div>       
     <div>
         <button class="btn btn-primary">male-names</button>
+        <br>
         <button class="btn btn-primary">kwasi</button>   
         <button class="btn btn-primary">kwadwo</button>
         <button class="btn btn-primary">kwabena</button>
@@ -53,6 +57,7 @@
     </div>
     <div>
         <button class="btn btn-primary">female-names</button>
+        <br>
         <button class="btn btn-primary">akosua</button>
         <button class="btn btn-primary">adwoa</button>
         <button class="btn btn-primary">abenaa</button>
